# aleph-protocol

./: .c8rc.json  .dockerignore  .gitignore  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  LICENSE  LICENSE-docs  README.md  ROADMAP.md  SECURITY.md  aleph-manifest-spec.md  aleph-protocol-paper.md  docker-compose.yml  eslint.config.js  foundations.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  typedoc.json
.changeset/: config.json  initial-production-foundation.md  sdk-publishability.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-images.yml  release.yml
code/: README.md  package-lock.json  package.json
code/src/: cli.ts  index.ts
code/test/: compose.test.ts  core.test.ts  hardening.test.ts  mcp.test.ts  network.test.ts  security.test.ts  settle.test.ts  trust.test.ts
conformance/: README.md
conformance/python/: aleph_jcs.py  interop_client.py  run_vectors.py
contracts/: foundry.toml
contracts/src/: AlephEscrow.sol
contracts/test/: AlephEscrow.t.sol  Reentrancy.t.sol
deploy/observability/: alerts.yml  (+1 more)
docs/: QUICKSTART.md
e2e/: package.json  tsconfig.json
examples/: package.json  tsconfig.json
scripts/: secret-scan.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/aleph_protocol/: __init__.py  base58.py  canonical.py  client.py  envelope.py  identity.py  signing.py
spec/: OBSERVABILITY.md  REGISTRY.md  REPUTATION.md  SETTLEMENT.md  THREAT-MODEL.md
(+78 files in other folders)
